--- a/2018/DNGlide2/app/src/main/res/layout/activity_main.xml
+++ b/2018/DNGlide2/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,10 @@
         android:layout_height="wrap_content"
         android:onClick="toNext"
         android:text="进入下个界面"/>
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="load"
+        android:text="开始加载"/>
 
 </LinearLayout>
