--- a/2018/ALiPayPlugin/taopiaopiao/src/main/res/layout/activity_main.xml
+++ b/2018/ALiPayPlugin/taopiaopiao/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:layout_below="@id/sendBroad"
         android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
