--- a/2018/HookFrameWorkYouHua/app/src/main/res/layout/activity_main.xml
+++ b/2018/HookFrameWorkYouHua/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,11 @@
         android:layout_height="wrap_content"
         android:text="跳转界面4"
         android:onClick="jump4" />
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="退出登录"
+        android:onClick="logout" />
 
 
 </LinearLayout>
