--- a/2018/LS19PluginFrameWork/app/src/main/res/layout/activity_main.xml
+++ b/2018/LS19PluginFrameWork/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,13 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="先打开进程"
+        android:gravity="center"
+        android:onClick="open"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="跳转到插件的Activity"
         android:gravity="center"
         android:onClick="jump"
